crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__snapshots__snapshot_credentials_crates_io_registry_section.snap
---
source: crates/shipper-core/src/ops/auth/credentials.rs
expression: token
---
"crates-io-token"
