crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__snapshots__snapshot_credentials_legacy_toplevel_format.snap
---
source: crates/shipper-core/src/ops/auth/credentials.rs
expression: token
---
"legacy-format-token"
