crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__snapshots__snapshot_error_malformed_credentials_file.snap
---
source: crates/shipper/src/ops/auth/credentials.rs
expression: msg
---
"TOML parse error at line 1, column 6\n  |\n1 | this is not valid toml [[[\n  |      ^\nkey with no value, expected `=`\n"
