crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__snapshots__snapshot_error_missing_credentials_file.snap
---
source: crates/shipper-core/src/ops/auth/credentials.rs
expression: err.to_string()
---
"credentials file not found"
