crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__snapshots__snapshot_error_token_not_found_for_registry.snap
---
source: crates/shipper-core/src/ops/auth/credentials.rs
expression: err.to_string()
---
"token not found for registry: nonexistent-registry"
