crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__credentials__tests__snapshots__snapshot_list_registries_many.snap
---
source: crates/shipper-core/src/ops/auth/credentials.rs
expression: registries
---
[
    "alpha",
    "beta",
    "crates-io",
    "delta",
    "gamma",
]
